@startuml class_diagram
!theme plain
skinparam classAttributeIconSize 0
skinparam classFontSize 12

title Tile Invalidation Bus - Classes

class DashboardTileDataInvalidatedPayload <<record>> {
    +Datasets: string[]
    +AffectedGoalIds: Guid[]
    +AffectedCommitmentIds: Guid[]
    +AffectedToDoIds: Guid[]
    +From: DateOnly?
    +To: DateOnly?
    +Reason: string
}

class DashboardTileDataset <<static>> {
    +DailyResults = "dailyResults"
    +WeeklyFocus = "weeklyFocus"
    +MonthlyProgress = "monthlyProgress"
    +OutstandingTodos = "outstandingTodos"
    +Relations = "relations"
    +GoalTrend = "goalTrend"
}

class DashboardTileInvalidationNotifier <<HostedService>> {
    -bus: IEventBus
    -publisher: IRealtimePublisher
    +HandleAsync(ActivityRecordedEvent): Task
    +HandleAsync(CommitmentChangedEvent): Task
    +HandleAsync(FrequencyChangedEvent): Task
    +HandleAsync(ToDoChangedEvent): Task
    -Publish(profileId, datasets, reason, ...): Task
}

class TileInvalidationService <<Angular>> {
    -hub: HubClient
    -stream$: Observable<payload>
    +invalidations$(dataset): Observable<payload>
}

DashboardTileInvalidationNotifier --> DashboardTileDataInvalidatedPayload : constructs
DashboardTileInvalidationNotifier ..> DashboardTileDataset : uses
TileInvalidationService --> DashboardTileDataInvalidatedPayload : emits

@enduml
